[workspace]
members = [
    ".",
    "rvc-core",
    "rvcd",
]
resolver = "2"

[workspace.dependencies]
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.10"
hex         = "0.4"
flate2      = "1"
clap        = { version = "4", features = ["derive"] }
tokio       = { version = "1", features = ["full"] }
chrono      = { version = "0.4", features = ["serde"] }
libp2p      = { version = "0.53", features = ["tcp", "noise", "yamux", "mdns", "request-response", "tokio", "macros", "ed25519"] }
ring        = "0.17"
base64      = "0.22"
futures     = "0.3"

[package]
name    = "rvc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rvc"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
flate2     = { workspace = true }
clap       = { workspace = true }
tokio      = { workspace = true }
chrono     = { workspace = true }
libp2p     = { workspace = true }
futures    = { workspace = true }
async-trait= "0.1"
rvc-core   = { path = "rvc-core" }

[dev-dependencies]
tempfile = "3"
