[package]
name    = "rvcd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rvcd"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
clap       = { workspace = true }
futures    = { workspace = true }
libp2p     = { workspace = true }
ring       = { workspace = true }
base64     = { workspace = true }
chrono     = { workspace = true }
async-trait = "0.1"
rvc-core   = { path = "../rvc-core" }
